--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,7 +21,7 @@ commands:
             mkdir /home/circleci/.circleci
             mkdir /home/circleci/.circleci/vault
             # Write the CircleCI provided value to a file read by Vault
-            echo $CIRCLE_OIDC_TOKEN > .circleci/vault/token.json
+            echo $CIRCLE_OIDC_TOKEN > /home/circleci/.circleci/vault/token.json
             # Substitute the env vars in our context to render the Vault config file
             sudo apt update && sudo apt install gettext-base
             envsubst < .circleci/vault/agent.hcl.tpl > .circleci/vault/agent.hcl
