--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,9 +24,9 @@ commands:
             echo $CIRCLE_OIDC_TOKEN > /home/circleci/.circleci/vault/token.json
             # Substitute the env vars in our context to render the Vault config file
             sudo apt update && sudo apt install gettext-base
-            envsubst < .circleci/vault/agent.hcl.tpl > .circleci/vault/agent.hcl
+            envsubst < /home/circleci/project/.circleci/vault/agent.hcl.tpl > /home/circleci/project/.circleci/vault/agent.hcl
             # This config indicates which secrets to collect and how to authenticate     
-            vault agent -config=.circleci/vault/agent.hcl
+            vault agent -config=/home/circleci/project/.circleci/vault/agent.hcl
       - run:
           name: Set Environment Variables from Vault
           command: |
